--- a/sniffer/Cargo.toml
+++ b/sniffer/Cargo.toml
@@ -7,4 +7,4 @@ rust-version = "1.85.0"
 [dependencies]
 tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
 windivert = "0.6.0"
-use anyhow::Result;
+anyhow = "1.0.96"
