--- a/sniffer/Cargo.toml
+++ b/sniffer/Cargo.toml
@@ -8,3 +8,4 @@ rust-version = "1.85.0"
 tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
 windivert = "0.6.0"
 anyhow = "1.0.96"
+log = "0.4"
