--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2024"
 rust-version = "1.85.0"
 
 [dependencies]
-tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
+tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "net", "io-util", "macros"] }
 anyhow = "1.0.96"
 log = "0.4"
 log4rs = "1.3.0"
+clap = { version = "4.5.31", features = ["derive"] }
+shared = { path = "../shared" }
