--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "server"
+name = "shared"
 version = "0.1.0"
 edition = "2024"
 rust-version = "1.85.0"
@@ -13,4 +13,3 @@ clap = { version = "4.5.31", features = ["derive"] }
 chrono = "0.4.31"
 serde = { version = "1.0.218", features = ["derive"] }
 bincode = "1.3.3"
-shared = { path = "../shared" }
