--- a/sniffer/Cargo.toml
+++ b/sniffer/Cargo.toml
@@ -13,7 +13,7 @@ name = "sniffer-cli"
 path = "src/main.rs"
 
 [dependencies]
-tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
+tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "signal", "macros"] }
 windivert = "0.6.0"
 anyhow = "1.0.96"
 log = "0.4"
