build rs, copy dlss, check if mpsc can be returned from dll routine

--- a/sniffer-consumer/Cargo.toml
+++ b/sniffer-consumer/Cargo.toml
@@ -3,6 +3,7 @@ name = "sniffer-consumer"
 version = "0.1.0"
 edition = "2024"
 rust-version = "1.85.0"
+build = "build.rs"
 
 [lib]
 path = "src/lib.rs"
