--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -13,3 +13,4 @@ clap = { version = "4.5.31", features = ["derive"] }
 chrono = "0.4.31"
 serde = { version = "1.0.218", features = ["derive"] }
 bincode = "1.3.3"
+rand = "0.9.0"
