--- a/sniffer/Cargo.toml
+++ b/sniffer/Cargo.toml
@@ -19,3 +19,4 @@ tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "signal", "ti
 windivert = "0.6.0"
 anyhow = "1.0.96"
 log = "0.4"
+shared = { path = "../shared" }
