--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-	"svelte.enable-ts-plugin": true
+	"svelte.enable-ts-plugin": true,
+	"rust-analyzer.linkedProjects": [
+		"app/Cargo.toml",
+		"game/client/Cargo.toml",
+		"shared/Cargo.toml",
+	]
 }
