--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -34,3 +34,4 @@ serde_json = "1"
 tokio = { version = "1.41.0", features = ["rt", "macros"] }
 sysinfo = "0.33.1"
 chrono = "0.4.31"
+log = "0.4.22"
