--- a/game/client/Cargo.toml
+++ b/game/client/Cargo.toml
@@ -10,4 +10,4 @@ anyhow = "1.0.96"
 log = "0.4"
 log4rs = "1.3.0"
 clap = { version = "4.5.31", features = ["derive"] }
-shared = { path = "../shared" }
+shared = { path = "../../shared" }
