--- a/game/server/Cargo.toml
+++ b/game/server/Cargo.toml
@@ -13,4 +13,4 @@ clap = { version = "4.5.31", features = ["derive"] }
 chrono = "0.4.31"
 serde = { version = "1.0.218", features = ["derive"] }
 bincode = "1.3.3"
-shared = { path = "../shared" }
+shared = { path = "../../shared" }
