--- a/sniffer/consumer/Cargo.toml
+++ b/sniffer/consumer/Cargo.toml
@@ -3,7 +3,6 @@ name = "sniffer-consumer"
 version = "0.1.0"
 edition = "2024"
 rust-version = "1.85.0"
-build = "build.rs"
 
 [lib]
 path = "src/lib.rs"
@@ -17,3 +16,4 @@ tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "signal", "ma
 anyhow = "1.0.96"
 log = "0.4"
 libloading = "0.8.6"
+shared = { path = "../../shared" }
