--- a/sniffer/lib/Cargo.toml
+++ b/sniffer/lib/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "sniffer"
+name = "sniffer_lib"
 version = "0.1.0"
 edition = "2024"
 rust-version = "1.85.0"
-build = "build.rs"
 
 [lib]
 name = "sniffer_lib"
@@ -19,4 +18,4 @@ tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "signal", "ti
 windivert = "0.6.0"
 anyhow = "1.0.96"
 log = "0.4"
-shared = { path = "../shared" }
+shared = { path = "../../shared" }
