--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
 	"rust-analyzer.linkedProjects": [
 		"app/Cargo.toml",
 		"game/client/Cargo.toml",
+		"sniffer/lib/Cargo.toml",
+		"sniffer/consumer/Cargo.toml",
 		"shared/Cargo.toml",
 	]
 }
