daisy ui, simple navigation, progress bars, initial load

--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -35,3 +35,4 @@ tokio = { version = "1.41.0", features = ["rt", "macros"] }
 sysinfo = "0.33.1"
 chrono = "0.4.31"
 log = "0.4.22"
+netstat2 = "0.11.1"
