--- a/web/package.json
+++ b/web/package.json
@@ -4,22 +4,23 @@
 	"description": "",
 	"type": "module",
 	"scripts": {
-	"dev": "vite dev",
-	"build": "vite build",
-	"preview": "vite preview",
-	"prepare": "svelte-kit sync || echo ''",
-	"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-	"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-	"lint": "eslint . && prettier --check .",
-	"format": "prettier --write .",
-	"test:unit": "vitest",
-	"test": "npm run test:unit -- --run && npm run test:e2e",
-	"test:e2e": "playwright test"
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"prepare": "svelte-kit sync || echo ''",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "eslint . && prettier --check .",
+		"format": "prettier --write .",
+		"test:unit": "vitest",
+		"test": "npm run test:unit -- --run && npm run test:e2e",
+		"test:e2e": "playwright test"
 	},
 	"license": "MIT",
 	"dependencies": {
-	"@tauri-apps/api": "^2",
-	"@tauri-apps/plugin-shell": "^2"
+		"@tabler/icons-svelte": "^3.31.0",
+		"@tauri-apps/api": "^2",
+		"@tauri-apps/plugin-shell": "^2"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
@@ -32,6 +33,7 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
+		"daisyui": "^5.0.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
@@ -46,5 +48,5 @@
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0",
 		"vitest": "^3.0.0"
-  }
+	}
 }
