--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,5 @@
 resolver = "2"
 members = [
     "app",
-    "shared",
-    "game/client",
-    "game/server",
-    "sniffer/lib",
-    "sniffer/consumer"
+    "shared"
 ]
