--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,5 @@
-build/
-logs/
 target/
-
-/gen/schemas
-
-test-results
-node_modules
-
-# Output
-.output
-.vercel
-.netlify
-.wrangler
-.svelte-kit
-/build
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Env
+*.dll
 .env
-.env.*
-!.env.example
-!.env.test
-
-# Vite
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
+*-shm
+*-wal
