--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ hex = "0.4.3"
 byteorder = "1.5.0"
 crossbeam = "0.8.4"
 crossterm = "0.29.0"
+clap = { version = "4.5.31", features = ["derive"] }
