--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ windivert = "0.6.0"
 anyhow = "1.0.96"
 log = "0.4"
 simple_logger = "5.0.0"
+flexi_logger = "0.30.1"
 chrono = "0.4.31"
 etherparse = "0.17"
 hex = "0.4.3"
@@ -22,3 +23,4 @@ byteorder = "1.5.0"
 crossbeam = "0.8.4"
 crossterm = "0.29.0"
 clap = { version = "4.5.31", features = ["derive"] }
+async-trait = "0.1.88"
