--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,11 @@ edition = "2024"
 rust-version = "1.85"
 build = "build.rs"
 
+[features]
+elevated = ["winres"]
+
 [target.'cfg(target_os = "windows")'.build-dependencies]
-winres = "0.1.12"
+winres = { version = "0.1.12", optional = true }
 
 [dependencies]
 tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "signal", "time", "sync", "macros"] }
